added start command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon -r dotenv/config index"
+    "server": "nodemon -r dotenv/config index",
+    "start": "node -r dotenv/config index"
   },
   "author": "",
   "license": "ISC",
